hphp/hack/test/typecheck/using/using_bad_undefined.php.exp
File "using_bad_undefined.php", line 25, characters 3-4:
The variable $x is defined (Naming[2007])
  File "using_bad_undefined.php", line 21, characters 10-11:
  But in a different scope
File "using_bad_undefined.php", line 25, characters 3-4:
Undefined variable: $x (Naming[2050])
File "using_bad_undefined.php", line 38, characters 3-4:
The variable $x is defined (Naming[2007])
  File "using_bad_undefined.php", line 31, characters 5-6:
  But in a different scope
File "using_bad_undefined.php", line 38, characters 3-4:
Undefined variable: $x (Naming[2050])
